--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "securetz/Websms-sms-api",
+  "name": "securetz/websms-sms-api",
   "description": "Websms SMS API is build for Websms SMS - Bulk SMS Application For Marketing",
   "type": "library",
   "license": "MIT",
